# UrlShortnerWebsite

./: README.md
url_backend/: .env  Cargo.toml
url_backend/migrations/2025-02-01-030405_create_users/: down.sql  up.sql
url_backend/src/: database.rs  main.rs  models.rs  schema.rs
