[package]
name = "url_backend"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.9.0"
anyhow = "1.0.95"
diesel = { version = "2.2.7", features = ["postgres", "r2d2"] }
r2d2 = "0.8.10"
dotenvy = "0.15.7"
pq-sys = { version = "0.6", features = ["bundled"] }
openssl-sys = { version = "0.9.100", features = ["vendored"] }
serde = "1.0.217"
tokio = "1.43.0"

[dev-dependencies]
reqwest = { version = "0.12.12", features = ["json"] }
testcontainers = "0.23.1"
testcontainers-modules = { version = "0.11.5", features = ["postgres"] }
tokio-postgres = "0.7.12"
